--- a/src/static/templates/backoffice/users/update.html
+++ b/src/static/templates/backoffice/users/update.html
@@ -48,7 +48,7 @@
 
     <div class="form-group__actions">
         <button class="btn btn-success" type="submit">Guardar</button>
-        <a class="btn btn-danger" href="{% url 'backoffice:users_editors' %}">Cancelar</a>
+        <a class="btn btn-danger" href="{% url 'backoffice:users' %}">Cancelar</a>
     </div>
 </form>
 {%endblock%}
