--- a/src/static/css/bundle.dist.css
+++ b/src/static/css/bundle.dist.css
@@ -22,6 +22,7 @@ html {
 
 body {
   margin: 0;
+  background-color:white;
 }
 
 /**
@@ -21653,7 +21654,7 @@ body {
   line-height: 1.5;
   color: #3e5569;
   text-align: left;
-  background-color: #eeeeee;
+  background-color: white;
 }
 
 .btn {
@@ -21668,6 +21669,7 @@ body {
   border-radius: 0.25rem;
 }
 
+}
 .btn:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -21700,6 +21702,24 @@ body {
   --bg-opacity: 1;
   background-color: #c53030;
   background-color: rgba(197, 48, 48, var(--bg-opacity));
+}
+
+/* btn login */
+
+.btnlogin{
+  background-color: transparent;
+  display:inline-block;
+  padding:0.35em 1.2em;
+  border:0.1em solid #FFFFFF;
+  border-radius:2em;
+  box-sizing: border-box;
+  font-weight:300;
+  color:#FFFFFF;
+  text-align:center;
+}
+.btnlogin:hover{
+  background-color: #66932f;
+  border-color:#66932f;
 }
 
 label {
@@ -22034,14 +22054,6 @@ input:focus,
   padding:3%
 }
 
- /* .main-header__logo > img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 60%;
-  padding:3%
-}  */
-
 .main-header__user-menu > a > img {
   width: 80px;
 }
@@ -22248,59 +22260,76 @@ div#footer_back {
 }
 
 .main-footer {
-  align-items: center;
+  /* align-items: center; */
   display: flex;
   flex-direction: column;
-  padding: 20px 10px;
+  padding: 50px 20px;
   max-width: 1440px;
   width: 100%;
 }
+.footerimg {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
 
 .footer-image {
-  width: 180px;
+  width: 200px;
 }
 
 .footer-link-list {
   color: white;
-  margin: 0;
-  padding: 0;
-  margin-top: 30px;
+  margin: 0px;
+  padding: 0px !important;
+  margin-top: 2em;
 }
 
 .footer-link-list__title {
   font-weight: bolder;
   text-transform: uppercase;
+  margin-bottom: 5%;
 }
 
 .footer-link-list__item > a {
   display: block;
   font-weight: lighter;
+  line-height: 2em;;
 }
 
+.socials > a > img{
+  width: 50px;
+}
+.footer-link-list .socials {
+  display: flex;
+  /* align-items: center; */
+}
 .footer-contact-info {
   color: white;
+  margin-top: 30px;
 }
 
-.footer-contact-info__item > a {
+.footer-contact-info__item > span {
   display: flex;
-  align-items: center;
+  /* align-items: center; */
 }
 
-.footer-contact-info__item > a > img {
-  padding-right: 5px;
-  width: 50px;
+.footer-contact-info__item > span > img {
+  /* padding-right: 5px; */
+  padding: 0px !important;
+  width: 40px;
 }
 
 #footer_bottom_back {
-  background-color: #6b6b6b;
+  background-color: #484848;
 }
 
 .footer-bottom {
   box-sizing: border-box;
-  color: white;
+  color: #989898;
   font-weight: lighter;
-  padding: 10px;
-  text-align: center;
+  font-size:10px;
+  padding: 2%;
+  text-align: left;
 }
 
 .footer-bottom > p > a {
@@ -22446,7 +22475,36 @@ div.main-slider__content {
   bottom: 20px;
 }
 
-.main-nav {
+
+.cat_main_nav	{
+  /* padding: 10px 16px; */
+  /* height: 100px; */
+  background-color: rgba(0, 0, 0, 0.2);
+  color: #f1f1f1;
+	z-index: 1500;
+  position:absolute;
+  top:12;
+  width:100%;
+  /* bottom:auto;
+  left:0;
+  right:0;
+  margin:auto;
+  height:auto; */
+}
+.cat_main_nav-logo > a > img{
+  width: 45%; 
+  padding: 3% 3%;
+  padding-left:10%;
+}
+.sticky_nav {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: rgba(255,255,255, 0.5);
+  color: black !important;
+}
+
+/* .main-nav {
   background-color: #ffffff;
   border-radius: 10px;
   max-width: 350px;
@@ -22470,7 +22528,7 @@ div.main-slider__content {
 
 .main-nav__logo > a > img {
   width: 300px;
-}
+} */
 
 .main-nav__menu {
   list-style: none;
@@ -22479,11 +22537,13 @@ div.main-slider__content {
 }
 
 .main-nav__item > a {
-  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
-  color: black;
+  /* border-bottom: 1px solid rgba(255, 255, 255, 0.5); */
+  /* color: black; */
+  color: white;
   font-weight: lighter;
+  text-transform: uppercase;
   display: block;
-  padding: 20px;
+  padding: 10%;
   text-align: center;
   position: relative;
 }
@@ -22822,12 +22882,84 @@ div#ssl_section_back {
   max-width: 300px;
 }
 
+
+
+.cat_main_nav > .icon {
+  display: none;
+}
+
+/* medias queries small device */
 @media only screen and (max-width: 640px) {
-  body {
-    background-color: lightblue;
-  }
   .slider-item__footer {
     padding:10%;
+  }
+  .btn-login{
+    position: absolute;
+  }
+  .prop_form{
+    padding-bottom:2%;
+  }
+  /* disable sticky */
+  .sticky_nav{
+    position: absolute !important;
+    top: 0px;
+  }
+  /*Top header top_header_back */
+  #top_header_back > section > .container > .row > .caterra_info{
+    display:none !important;
+  }
+  #top_header_back > section > .container > .row > .socials{
+    margin-right:1%;
+  }
+  /* Menu cat_nav_main */
+
+  .cat_main_nav {
+  overflow: hidden;
+  /* background-color: #333; */
+}
+  .cat_main_nav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .cat_main_nav a:hover {
+    background-color: #555;
+    color: white;
+  }
+  
+  .cat_main_nav > .active {
+    background-color: #4CAF50;
+    color: white;
+  }
+  .cat_main_nav a:not(:first-child), .dropdown .dropbtn {
+    display: none;
+  }
+  .cat_main_nav a.icon {
+    float: right;
+    display: block;
+  }
+  .cat_main_nav.responsive {position: relative;}
+  .cat_main_nav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .cat_main_nav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .cat_main_nav.responsive .dropdown {float: none;}
+  .cat_main_nav.responsive .dropdown-content {position: relative;}
+  .cat_main_nav.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
   }
 }
 
@@ -23017,7 +23149,7 @@ div#ssl_section_back {
   max-width: 1920px;
 }
 
-.agentes > h1 {
+.h1_title {
   color: #486600;
   font-size: 24pt;
   text-transform: uppercase;
@@ -23025,7 +23157,7 @@ div#ssl_section_back {
   margin-bottom: 1%;
 }
 
-.agentes > h1:after {
+.h1_title:after {
   content: "";
   /* This is necessary for the pseudo element to work. */
   display: block;
