--- a/src/static/templates/backoffice/sliders/list.html
+++ b/src/static/templates/backoffice/sliders/list.html
@@ -29,8 +29,8 @@
 {% block footer_actions %}
 <div id="footer_actions">
     <ul class="footer-actions">
-        <!-- <li class="footer-actions__item"><a href="{% url 'backoffice:sliders_create' %}"><img class="footer-actions__icon"
-                    src="{% static 'img/backoffice/ic-add.png' %}" alt="">Nuevo slider</a></li> -->
+        <li class="footer-actions__item"><a href="{% url 'backoffice:sliders_create' %}"><img class="footer-actions__icon"
+                    src="{% static 'img/backoffice/ic-add.png' %}" alt="">Nuevo slider</a></li>
     </ul>
 </div>
 {% endblock footer_actions %}
